--- a/index.html
+++ b/index.html
@@ -4,6 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Text Based Game</title>
+    <style>
+        body {
+            font-family: 'Courier New', monospace;
+            background-color: black;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+        #gamearea {
+            border: 1px solid white;
+            padding: 20px;
+            max-width: 500px;
+            margin: 0 auto;
+        }
+        #textarea {
+            font-size: 18px;
+            margin-bottom: 20px;
+        }
+        #usertext {
+            width: 80%;
+            padding: 10px;
+            box-sizing: border-box;
+            font-size: 16px;
+        }
+    </style>
 </head>
 <body>
     <div>
